# CD_Final_version

CD-Lab-EL---LLVM-Constant-Folding-Pass-with-Strength-Reduction-main/: DEMO.md  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  PASS_REPORT.md  README.md  app.py  build.sh  demo_macro_optimization.sh  output_macro_source.ll  output_test10_nested_fold.ll  output_test1_constant_fold.ll  output_test2_strength_reduce.ll  output_test3_mixed.ll  output_test4_non_power_of_two.ll  output_test5_negative_power.ll  output_test6_fold_with_expr.ll  output_test7_bitwise_fold.ll  output_test8_constleft_strength.ll  output_test9_constant_expr_div.ll  run.sh  test_all.sh
CD-Lab-EL---LLVM-Constant-Folding-Pass-with-Strength-Reduction-main/screenshots/: README.txt
CD-Lab-EL---LLVM-Constant-Folding-Pass-with-Strength-Reduction-main/src/: CMakeLists.txt  ConstantFoldStrength.cpp  ConstantFoldStrength.h  Runner.cpp
CD-Lab-EL---LLVM-Constant-Folding-Pass-with-Strength-Reduction-main/static/: index.html
CD-Lab-EL---LLVM-Constant-Folding-Pass-with-Strength-Reduction-main/testcases/: test10_nested_fold.ll  test1_constant_fold.ll  test2_strength_reduce.ll  test3_mixed.ll  test4_non_power_of_two.ll  test5_negative_power.ll  test6_fold_with_expr.ll  test7_bitwise_fold.ll  test8_constleft_strength.ll  test9_constant_expr_div.ll  test_macro_source.c  test_macro_source.ll
